--- a/yi_gc2d_pystan.ipynb
+++ b/yi_gc2d_pystan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -14,6 +14,127 @@
     "import pystan\n",
     "import scipy.io as sio\n",
     "import time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# model 0: testing stan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL anon_model_d318d729a5f7d61c571fb4e13264ef98 NOW.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26.81448793411255\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = time.time()\n",
+    "ocode = \"\"\"\n",
+    "   data {\n",
+    "       int<lower=1> Nbins; // number of bins \n",
+    "       vector[Nbins] x; // input\n",
+    "       real<lower=0> sigma; // standard deviation for normal\n",
+    "   }\n",
+    "   transformed data {\n",
+    "   }\n",
+    "   parameters {\n",
+    "       vector[Nbins] y; // output\n",
+    "   }  \n",
+    "   model {         \n",
+    "        y ~ normal(x,sigma);\n",
+    "   }\n",
+    "\"\"\"\n",
+    "\n",
+    "datain = {'Nbins': 6,\n",
+    "        'x': [1,20,3,4,-1,3],\n",
+    "        'sigma': 2\n",
+    "       }\n",
+    "\n",
+    "#sm = pystan.StanModel(model_code=ocode)\n",
+    "fit = pystan.stan(model_code=ocode, data=datain,\n",
+    "                  iter=1000, chains=4)\n",
+    "\n",
+    "elapsed = time.time() - t\n",
+    "print(elapsed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "yextract = fit.extract('y')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2000, 6)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp = yextract[\"y\"]\n",
+    "temp.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('y', array([  1.,  20.,   3.,   4.,  -1.,   3.]))])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datain = {'Nbins': 6,\n",
+    "        'x': [1,20,3,4,-1,3],\n",
+    "        'sigma': 2\n",
+    "       }\n",
+    "op = sm.optimizing(data=datain)\n",
+    "op"
    ]
   },
   {
