--- a/yi_gc2d_pystan.ipynb
+++ b/yi_gc2d_pystan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -25,9 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -41,8 +41,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "26.81448793411255\n"
+      "33.51999497413635\n",
+      "(2000, 6)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('y', array([  1.,  20.,   3.,   4.,  -1.,   3.]))])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -73,7 +84,20 @@
     "                  iter=1000, chains=4)\n",
     "\n",
     "elapsed = time.time() - t\n",
-    "print(elapsed)"
+    "print(elapsed)\n",
+    "\n",
+    "yextract = fit.extract('y')\n",
+    "temp = yextract[\"y\"]\n",
+    "print(temp.shape)\n",
+    "op = sm.optimizing(data=datain)\n",
+    "op"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# model 1: linear-circular regression in 1d with von mises noise"
    ]
   },
   {
@@ -83,59 +107,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "yextract = fit.extract('y')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2000, 6)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "temp = yextract[\"y\"]\n",
-    "temp.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "OrderedDict([('y', array([  1.,  20.,   3.,   4.,  -1.,   3.]))])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "datain = {'Nbins': 6,\n",
-    "        'x': [1,20,3,4,-1,3],\n",
-    "        'sigma': 2\n",
-    "       }\n",
-    "op = sm.optimizing(data=datain)\n",
-    "op"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
